fix: overflowing text title

--- a/src/components/sidebar/book-items/bookItem.module.css
+++ b/src/components/sidebar/book-items/bookItem.module.css
@@ -29,7 +29,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  gap: 0.4em;
+  gap: 0.2em;
   width: 100%;
   & > :first-child {
     display: flex;
@@ -42,11 +42,12 @@
   flex-direction: column;
   gap: 0.2em;
   font-weight: 700;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
   font-size: 1.4rem;
   & > :first-child {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    max-width: 300px;
     color: var(--text-white);
   }
 }
@@ -75,7 +76,6 @@
   color: #ffffff50;
 }
 .updateTime::before {
-  /* position: fixed; */
   content: "";
   background: url("../../../assets/icons/personal-library/updated-icon.svg");
   background-size: 18px 18px;
